<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginHorizontal="12dp"
    android:orientation="horizontal"
    android:weightSum="3">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upcoming"
        style="@style/FavoriteButtonStyle"
        android:text="@string/upcoming" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Live"
        style="@style/FavoriteButtonStyle"
        android:text="@string/live" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finished"
        style="@style/FavoriteButtonStyle"
        android:text="@string/finished" />

</LinearLayout>