<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="168dp"
    android:background="@android:color/transparent"
    android:backgroundTint="@color/layer2"
    app:cardCornerRadius="28dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <TextView
            android:id="@+id/dialogTitle"
            style="@style/AppTextSemiBold"
            android:text="@string/clear_cash"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialogMessage"
            style="@style/AppTextRegular"
            android:layout_marginTop="16dp"
            android:text="@string/all_saved_data_will_be_lost_are_you_sure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogTitle" />

        <TextView
            android:id="@+id/cancel"
            style="@style/AppTextRegular"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogMessage" />

        <TextView
            android:id="@+id/delete"
            style="@style/AppTextRegular"
            android:layout_marginEnd="8dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp"
            android:text="@string/delete"
            android:textColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancel"
            app:layout_constraintTop_toTopOf="@id/cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>